--- a/courses/templates/homepage.html
+++ b/courses/templates/homepage.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block head_title %}Needham Risk Management Online Training{% endblock %}
+{% block head_title %}Online Training{% endblock %}
 
 {% block body_class %}home{% endblock %}
 
@@ -11,10 +11,10 @@
 <section class="jumbotron">
         <div class="container">
             {% include "_messages.html" %}
-            <h1>{% blocktrans %}Welcome to<br>Needham Risk Management's Online Training System{% endblocktrans %}</h1>
+            <h1>{% blocktrans %}Welcome to<br>Online Training System{% endblocktrans %}</h1>
             <p>
                 {% blocktrans %}
-                Your employer has teamed up with Needham Risk Management to provide online safety and health training.
+                Your employer has teamed up to provide online safety and health training.
                 {% endblocktrans %}
             </p>
             {% if not user.is_authenticated %}
@@ -27,9 +27,9 @@
     <section>
         <div class="container">
             <h2 class="text-center">{% blocktrans %}{% endblocktrans %}</h2>
-            <p class="lead">This is the home of Needham Risk Management’s Online Safety and Health training presentations. In order to participate in the training program(s) enter your Full Name, and optionally enter your email address, then simply click on the dropdown menu below and select your employer and enter the password provided to you by your employer.</p>
+            <p class="lead">This is the home of Online Safety and Health training presentations. In order to participate in the training program(s) enter your Full Name, and optionally enter your email address, then simply click on the dropdown menu below and select your employer and enter the password provided to you by your employer.</p>
             <p class="lead">You will then be able to select from several different training opportunities and you will be asked whether you are instructional staff or non-instructional staff. Watch the video presentation by clicking the play button and at the conclusion you will take a short quiz. You must score 80% or better in order to get a training certificate. If you fail to achieve 80% re-watch the presentation and attempt the test again. If you are unable to successfully complete the test contact your supervisor for more information on the next steps to complete the training requirement.</p>
-<p class="lead">Once you have successfully completed the test an icon will appear to click to receive a certificate of training. Additionally, if you have enetered your email address, a copy of the certificate will be emailed to you. Once you have printed the certificate you will need a representative from your employer to sign the certificate and provide you with any additional necessary information. If you have any questions or concerns please contact Needham Risk Management at (518) 860-1758.</p>
+<p class="lead">Once you have successfully completed the test an icon will appear to click to receive a certificate of training. Additionally, if you have enetered your email address, a copy of the certificate will be emailed to you. Once you have printed the certificate you will need a representative from your employer to sign the certificate and provide you with any additional necessary information. If you have any questions or concerns please contact us.</p>
 <!--
 <div class="feature-columns">
                 <div>
