Fix dashboard link

--- a/courses/templates/_nav.html
+++ b/courses/templates/_nav.html
@@ -1,5 +1,5 @@
 <ul class="nav navbar-nav">
-  <li><a href="/courses/">Courses</a></li>
+  <li><a href="/dashboard/">Learner Dashboard</a></li>
   {% if request.user.is_staff %}
   <li><a href="/courses/admin/">Admin</a></li>
   {% endif %}
