--- a/courses/templates/_nav.html
+++ b/courses/templates/_nav.html
@@ -1,7 +1,7 @@
 <ul class="nav navbar-nav">
   <li><a href="/dashboard/">Learner Dashboard</a></li>
   {% if request.user.is_staff %}
-  <li><a href="/courses/admin/">Admin</a></li>
+  <li><a href="/admin/">Admin</a></li>
   {% endif %}
 </ul>
 
