Add the rest of admin templates

--- a/courses/templates/admin/org_form.html
+++ b/courses/templates/admin/org_form.html
@@ -12,3 +12,10 @@
   </div>
 </div>
 {% endblock %}
+
+{% block scripts %}
+    {{ block.super }}
+    <script>
+     $('#id_training_year_start').datepicker({format: 'yyyy-mm-dd', autoclose: true,});
+    </script>
+{% endblock %}
